Testing (#9)
* prepare configuration

* add LoadIncreaser

* add break if threshold failed

* add maxLoad Metric

* refactoring

* switch from spike to stress test

* add tags to scenarios

* little refactor

* add ThresholdImporter

* minor changes

* add JSONImporter

* add ThresholdImporter

* update documentation

* add ConfigParserTest

* add MapperTests

* rebase main

* add MetricCreaterTest

* add MetricCreaterHelperTest

* add ThresholdImporterTest

* little refactor